added references, moved filter before select, edited paragraph on indigenous languages

--- a/index.Rmd
+++ b/index.Rmd
@@ -109,26 +109,25 @@ By the end of the chapter, students will be able to:
 
 ## Ask a question 
 
-Before the arrival of European colonists, Indigenous peoples lived in Canada with their own cultures and many different languages. Many Aboriginal languages are unique to Canada and not spoken anywhere else in the world. (https://www150.statcan.gc.ca/n1/pub/11-630-x/11-630-x2018001-eng.htm) Sadly, colonization has led to the loss of many of these languages. For instance, generations of children were not allowed to speak their mother tongue (the first language an individual learns in childhood) in Canadian residential schools. Colonizers renamed places they had "discovered". Acts such as these have significantly harmed the continuity of Aboriginal languages in Canada. https://opentextbc.ca/indigenizationfoundations/chapter/43/#:~:text=In%20Canada%2C%20colonization%20occurred%20when,not%20favour%20the%20Indigenous%20Peoples.
+Before the arrival of colonists, Indigenous peoples lived in Canada with their
+own cultures and many different languages. Many Aboriginal languages are unique
+to Canada and not spoken anywhere else in the world [@statcan2018mothertongue].
+Sadly, colonization has led to the loss of many Aboriginal languages. For instance,
+generations of children were not allowed to speak their mother tongue
+(the first language an individual learns in childhood) in Canadian residential 
+schools. Colonizers renamed places they had "discovered" [@wilson2018]. Acts such as these have significantly harmed the continuity of Aboriginal languages in Canada.
 
-> To learn more, see this resource: 
+> To learn more about Indigenous languages in Canada, check out [Canadian Geographic's article on Mapping Indigenous languages in Canada](https://www.canadiangeographic.ca/article/mapping-indigenous-languages-canada) [@walker2017].
 
-In the 2016 census, more than 70 Aboriginal languages were reported as being spoken. Suppose we want to ask the question:
+According to the 2016 census, more than 70 Aboriginal languages were reported as being spoken. Suppose we want to ask the question:
 
-*What ten Aboriginal languages were most often reported in 2016 as mother tongues in Canada and how many people speak each of them?* 
+*What ten Aboriginal languages were most often reported in 2016 as mother tongues in Canada, and how many people speak each of them?* 
 
-This question is an example of a descriptive question since we are summarizing characteristics of a data set without interpretation. Now that we have asked our question, the next step is to collect or identify the data set you will be working with. 
+This question is an example of a *descriptive question* since we are summarizing 
+the characteristics of a data set without further interpretation. 
+ Now that we have asked our question, the next step is collecting or identifying the data set with which we will be working. In this chapter, we will be working with a data set originally from [{canlang} R data package](https://ttimbers.github.io/canlang/) [@timbers2020canlang], which has language data collected in the 2016 Canadian census [@cancensus2016]. 
 
-In this chapter, we will be working with a data set originally from [{canlang} R data package](https://ttimbers.github.io/canlang/) [@timbers2020canlang], which has language data collected in the 2016 Canadian census [@cancensus2016]. 
-
-```{bash, echo=FALSE, comment=NA}
-head -n 10 data/can_lang.csv
-```
-
-
-
-In this data frame there are 214 rows rows (corresponding to the 214 languages recorded on the 2016 Canadian census)
-and 6 columns: 
+In this data frame there are 214 rows (corresponding to the 214 languages recorded on the 2016 Canadian census) and 6 columns: 
 
 1. `category`: Higher level language category (describing whether the language is an Official Canadian language, an Aboriginal language, or a Non-Official and Non-Aboriginal language).
 2. `language`: Language queried about on the Canadian Census.
@@ -141,7 +140,7 @@ and 6 columns:
 > **A note about the *data* in data science!** 
 > Data science cannot be done without a deep understanding of the data and problem domain. In this book, we have simplified the data sets used in our examples to concentrate on concepts. In real life, we cannot and should not do data science without a domain expert. Alternatively, it is common to practice data science in your domain of expertise! Remember that when we work with data, it is essential to think about *how* the data were collected, which affects the conclusions we can draw. If your data are biased, then your results will be biased!
 
-Now we just need to use R to load the data, do some wrangling and visualize the data to answer this question!
+Now that we have asked our question and identified the data we are using, we just need to use R to load the data, do some wrangling and visualize the data to answer this question!
 
 ## Loading a spreadsheet-like data set
 
@@ -155,8 +154,7 @@ knitr::include_graphics("img/spreadsheet_vs_dataframe.PNG")
 The first kind of data file that we will learn how to load into R (as a data frame) is the 
 spreadsheet-like *comma-separated values* format (`.csv` for short).
 These files have names ending in `.csv`, and can be opened and saved using common spreadsheet programs like Microsoft Excel and Google Sheets. 
-For example, a `.csv` file named `can_lang.csv` [is included with the code for this book](https://github.com/UBC-DSCI/introduction-to-datascience/blob/master/data/can_lang.csv). 
-This file--- originally from [{canlang} R data package](https://ttimbers.github.io/canlang/) [@timbers2020canlang] ---has language data collected in the 2016 Canadian census [@cancensus2016]. 
+For example, the `.csv` file named `can_lang.csv` [is included with the code for this book](https://github.com/UBC-DSCI/introduction-to-datascience/blob/master/data/can_lang.csv). 
 If we were to open this data in a plain text editor, we would see each row on its own line, and each entry in the table separated by a comma:
 
 ```{bash, echo=FALSE, comment=NA}
@@ -208,6 +206,11 @@ so that we could refer to it later for analysis and visualization.
 
 There are two possible ways to assign a name to something in R ---
 using either the assignment symbol (`<-`) or the equals symbol (`=`). 
+
+```{r naming-things}
+first_name <- "Naming using the assignment symbol"
+second_name = "Naming using the equals symbol"
+```
 From a style perspective, the assignment symbol is preferred 
 and is what we will use in this course. 
 When we name something in R using the assignment symbol, `<-`, 
@@ -219,10 +222,11 @@ need to be surrounded by quotes.
 
 
 There are certain conventions for naming objects in R. 
-Object names should consist of letters, numbers and underscores `_` to separate words within a name.
+Object names should consist of letters, numbers and underscores `_` to separate
+the words in a name.
 You should also try to give your objects meaningful names.
 For instance, you *can* name a plot `x`. 
-However, using more meaningful terms, such as `canlang_plot`, will help you remember what each name in your code represents. 
+However, using more meaningful terms, such as `language_plot`, will help you remember what each name in your code represents. 
 We recommend following the Tidyverse naming conventions outlined in the [Tidyverse Style Guide](https://principles.tidyverse.org/names-attribute.html#universal-names) [@tidyversestyleguide]. 
 
 Let's now use the assignment symbol to give the name `can_lang` 
@@ -248,32 +252,29 @@ can_lang
 
 ## Creating subsets of data frames with `select` & `filter`
 
-Now, we are going to learn how to obtain subsets of data from a data frame in R using two other `tidyverse` functions: `select` and `filter`. 
-The `select` function allows you to create a subset of the columns of a data frame, while the `filter` function allows you to obtain a subset of the rows with specific values.
- let's take a look at the language data collected in the 2016 Canadian census again to familiarize ourselves with it. We will do this by printing the data we loaded earlier in the chapter to the screen. 
+Now, we are going to learn how to obtain subsets of data from a data frame in R using two other `tidyverse` functions: `select` and `filter`. The `select` function allows you to create a subset of the columns of a data frame, while the `filter` function allows you to obtain a subset of the rows with specific values.
 
-
+Let's take a look at the language data collected in the 2016 Canadian census again to familiarize ourselves with it. We will do this by printing the data we loaded earlier in the chapter to the screen. 
 ```{r print_data_again}
 can_lang
 ```
 
-
-### Using `select` to a single column
-
-Now let's use `select` to extract the language column from this data frame. To do this, we need to provide the `select` function with two arguments. The first argument is the 
-name of the data frame object, which in this example is `can_lang`. The second argument is the column name that we want to select, here `language`. After passing these two arguments,
-the  `select` function returns a single column (the `language` column that we asked for) as a data frame.
-
-
-```{r}
-language_column <- select(can_lang, language)
-language_column
-```
-
-
 ### Using `filter` to extract rows
-
-We can use the `filter` function to obtain the subset of rows with desired values from a data frame. Again, our first argument is the name of the data frame object, `can_lang`. The second argument is a logical statement to use when filtering the rows. Suppose we were interested in looking at the languages in the Aboriginal languages higher-level category in this data set. To filter only those rows, we use the *equivalency operator* `==` to compare the values of the `category` column with the value `"Aboriginal languages"`. Similar to when we loaded the data file and put quotes around the filename, here we need to put quotes around `"Aboriginal languages"`. Using quotes tells R that this is a character value and not one of the special words that make up R programming language, nor one of the names 
+Looking at our `can_lang` data, we see that the column `category` contains 
+different high-level categories of languages, which include "Aboriginal languages",
+"Non-Official & Non-Aboriginal languages" and "Official languages". 
+To answer our question (*what ten Aboriginal languages were most often reported in 2016 as mother tongues in Canada, and how many people speak each of them?*) we 
+want to filter our data set, so we restrict our attention to only the 
+"Aboriginal languages" category. We can use the `filter` function to obtain
+the subset of rows with desired values from a data frame. Again, our first 
+argument is the name of the data frame object, `can_lang`. The second argument
+is a logical statement to use when filtering the rows. Suppose we were interested 
+in looking at the languages in the "Aboriginal languages" higher-level category 
+in this data set. To filter only those rows, we use the *equivalency operator* `==` to compare the values of the `category` column with the value `"Aboriginal languages"`. 
+Similar to when we loaded the data file and put quotes around the filename, 
+here we need to put quotes around `"Aboriginal languages"`. Using quotes tells R
+that this is a character value and not one of the special words that make up R
+programming language, nor one of the names 
 we have given to data frames in the code we have already written.
 
 With these arguments, `filter` returns a data frame that has all the columns of the input data frame but only the rows we asked for in our logical filter statement. 
@@ -284,12 +285,18 @@ aboriginal_lang
 ```
 
 
-## Exploring data with visualizations
-Creating effective data visualizations is an essential piece to any data analysis. For the remainder of Chapter 1, we will learn how to use functions from the `tidyverse` package to make visualizations that let us explore relationships in the data. We will develop a visualization of the language data collected in the 2016 Canadian census we’ve been working with to help us understand what ten Aboriginal languages were most often reported in 2016 as mother tongues in Canada and how many people speak each of them? This question is an example of an exploratory data analysis question: we are looking for relationships and patterns within the data set we have but are not trying to generalize what we find beyond this data set.
+### Using `select` to a single column
 
-### Using `ggplot` to create a bar plot
+Now let's use `select` to extract the `language` and `mother_tongue` columns from this data frame. To do this, we need to provide the `select` function with three arguments. The first argument is the 
+name of the data frame object, which in this example is `can_lang`. The second and third arguments are the column names that we want to select, here `language` and `mother_tongue`. After passing these three arguments,
+the  `select` function returns two columns (the `language` and `mother_tongue` columns that we asked for) as a data frame.
 
-In our data set, we can see that each variable--- higher-level language category (`category`), language (`language`), mother tongue (`mother_tongue`), language spoken most at home (`most_at_home`), etc. ---are all in separate columns. In addition, there is a single row (or observation) for each language. The data are, therefore, in what we call a *tidy data* format. Tidy data is a fundamental concept and will be a significant focus in the remainder of this course: many of the functions from `tidyverse` require tidy data, including the `ggplot` function that we will use shortly for our visualization. We will formally introduce this concept in chapter 3.
+
+```{r}
+language_column <- select(can_lang, language, mother_tongue)
+language_column
+```
+
 
 To answer our data analysis question, we will begin by using the `slice_max` function, which selects rows with the highest values of a variable. Here we want to choose the ten Aboriginal languages most often reported as a mother tongue language. In the function, we need to pass the data frame, the number of rows to select, and the variable to order by. 
 
@@ -297,6 +304,14 @@ To answer our data analysis question, we will begin by using the `slice_max` fun
 ten_lang <- slice_max(aboriginal_lang, n = 10, order_by = mother_tongue)
 ten_lang
 ```
+
+## Exploring data with visualizations
+Creating effective data visualizations is an essential piece to any data analysis. For the remainder of Chapter 1, we will learn how to use functions from the `tidyverse` package to make visualizations that let us explore relationships in the data. We will develop a visualization of the language data collected in the 2016 Canadian census we’ve been working with to help us understand what ten Aboriginal languages were most often reported in 2016 as mother tongues in Canada and how many people speak each of them? This question is an example of an exploratory data analysis question: we are looking for relationships and patterns within the data set we have but are not trying to generalize what we find beyond this data set.
+
+### Using `ggplot` to create a bar plot
+
+In our data set, we can see that each variable--- higher-level language category (`category`), language (`language`), mother tongue (`mother_tongue`), language spoken most at home (`most_at_home`), etc. ---are all in separate columns. In addition, there is a single row (or observation) for each language. The data are, therefore, in what we call a *tidy data* format. Tidy data is a fundamental concept and will be a significant focus in the remainder of this course: many of the functions from `tidyverse` require tidy data, including the `ggplot` function that we will use shortly for our visualization. We will formally introduce this concept in chapter 3.
+
 
 We will make a bar plot using the `most_at_home` and `language` columns from our `ten_lang` data frame. To create a bar plot of these two variables using the `ggplot` function, we would the following: 
 
