--- a/references.bib
+++ b/references.bib
@@ -122,3 +122,27 @@
   title = {The tidyverse style guide},
   url = {https://style.tidyverse.org/}
 }
+
+@misc{statcan2018mothertongue,
+  author = {Statistics Canada},
+  title = {The evolution of language populations in Canada, by mother tongue, from 1901 to 2016},
+  year = 2018,
+  url = {https://www150.statcan.gc.ca/n1/pub/11-630-x/11-630-x2018001-eng.htm},
+  urldate = {2021-05-27}
+}
+
+@online{wilson2018,
+  author = {Kory Wilson},
+  title = {Pull Together: Foundations Guide},
+  year = 2018,
+  url = {https://opentextbc.ca/indigenizationfoundations/},
+  urldate = {2021-05-27}
+}
+
+@online{walker2017,
+  author = {Nick Walker},
+  title = {Mapping Indigenous languages in Canada},
+  year = 2017,
+  url = {https://www.canadiangeographic.ca/article/mapping-indigenous-languages-canada},
+  urldate = {2021-05-27}
+}
