added section on slice and arrange

--- a/index.Rmd
+++ b/index.Rmd
@@ -103,6 +103,7 @@ By the end of the chapter, students will be able to:
     - `read_csv` 
     - `select`
     - `filter`
+    - `arrange`
     - `slice`
     - `ggplot`
     - `aes`
@@ -285,28 +286,37 @@ aboriginal_lang
 ```
 
 
-### Using `select` to a single column
+### Using `select` to extract columns
 
 Now let's use `select` to extract the `language` and `mother_tongue` columns from this data frame. To do this, we need to provide the `select` function with three arguments. The first argument is the 
-name of the data frame object, which in this example is `can_lang`. The second and third arguments are the column names that we want to select, here `language` and `mother_tongue`. After passing these three arguments,
+name of the data frame object, which in this example is `aboriginal_lang`. The second and third arguments are the column names that we want to select, here `language` and `mother_tongue`. After passing these three arguments,
 the  `select` function returns two columns (the `language` and `mother_tongue` columns that we asked for) as a data frame.
 
 
 ```{r}
-language_column <- select(can_lang, language, mother_tongue)
-language_column
+selected_lang <- select(aboriginal_lang, language, mother_tongue)
+selected_lang
 ```
 
+### Using `arrange` and `slice` to order and select rows
 
-To answer our data analysis question, we will begin by using the `slice_max` function, which selects rows with the highest values of a variable. Here we want to choose the ten Aboriginal languages most often reported as a mother tongue language. In the function, we need to pass the data frame, the number of rows to select, and the variable to order by. 
+The  `arrange` function allows us to order the rows of a data frame by the values of a selected column. We need to pass the data frame, and the variable to order by in the first two arguments of this function.  
+Since we want to choose the ten Aboriginal languages most often reported as a mother tongue language, we will use the `arrange` function to order the rows in our `selected_lang` data frame by the `mother_tongue` column. We want to order the rows in descending order (from largest to smallest) so we include `desc` before the column name `mother_tongue` to sort in descending order. 
 
 ```{r}
-ten_lang <- slice_max(aboriginal_lang, n = 10, order_by = mother_tongue)
-ten_lang
+arranged_lang <- arrange(selected_lang, by = desc(mother_tongue))
+arranged_lang
 ```
 
+Next we will use the `slice` function, which selects rows according to their row number. Since we want to choose the ten Aboriginal languages, we will indicate we want the rows 1 to 10 (`1:10`).
+```{r}
+ten_lang <- slice(arranged_lang, 1:10)
+ten_lang
+```
+Now we have answered our initial question with the frequency table we generated in R. Are we done? Well technically this table does answer our question. However, we can go one step further and create a visualization to answer our question as well. Visualizations are a great tool for summarizing information into a clear format to help you effectively communicate with your audience. 
+
 ## Exploring data with visualizations
-Creating effective data visualizations is an essential piece to any data analysis. For the remainder of Chapter 1, we will learn how to use functions from the `tidyverse` package to make visualizations that let us explore relationships in the data. We will develop a visualization of the language data collected in the 2016 Canadian census we’ve been working with to help us understand what ten Aboriginal languages were most often reported in 2016 as mother tongues in Canada and how many people speak each of them? This question is an example of an exploratory data analysis question: we are looking for relationships and patterns within the data set we have but are not trying to generalize what we find beyond this data set.
+Creating effective data visualizations is an essential piece to any data analysis. We will develop a visualization of the language data collected in the 2016 Canadian census we’ve been working with to help us understand what ten Aboriginal languages were most often reported in 2016 as mother tongues in Canada and how many people speak each of them? 
 
 ### Using `ggplot` to create a bar plot
 
