added some writing to intro

--- a/index.Rmd
+++ b/index.Rmd
@@ -109,6 +109,8 @@ By the end of the chapter, students will be able to:
     - `aes`
 
 ## Ask a question 
+Where to begin? As outlined in Figure \@ref(fig:img-chapter-overview), we will begin
+with a question we want to answer. Generally, we need some context, which will frame our question. 
 
 Before the arrival of colonists, Indigenous peoples lived in Canada with their
 own cultures and many different languages. Many Aboriginal languages are unique
