defined variable, observation and added that the definitions are statistics specific

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -38,7 +38,7 @@ to use and manipulate these objects in our data analysis.
 
 ### What is a data frame?
 
-Let's first start by defining what a **data frame** is exactly. From a data perspective, it is a rectangle where the rows are the observations:
+To define a **data frame**, first, let's explain a few commonly used terms in statistics. In statistics, **observations** are the things we measure (e.g. students) and **variables** are the characteristics of those observations, which *vary* (e.g. students' grades). From a data perspective, a data frame is a rectangle where the rows are the observations:
 
 ```{r 02-setup, include=FALSE}
 devtools::install_github("ttimbers/canlang")
