--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -81,6 +81,7 @@ Table: (\#tab:datatype-table) Basic data types in R
 |-------|------------------|-----------|
 | character | Letters or numbers surrounded by quotes |  "1", "Hello world!" |
 | numeric | Whole numbers and numbers with decimal values |   1.23, 20 |  
+| double  | Numbers with decimals values         | 1.2333 | 
 | integer | Numbers that do not contain decimals | 1L, 20L (where "L" tells R to store as an integer) | 
 | logical |  A value of true and false | `TRUE`, `FALSE` | 
 
