edited data types table

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -79,12 +79,13 @@ Table: (\#tab:datatype-table) Basic data types in R
 
 | Data type | Description | Example |
 |-------|------------------|-----------|
-| character | Letters or numbers surrounded by quotes |  "1", "Hello world!" |
-| numeric | Whole numbers and numbers with decimal values |   1.23, 20 |  
-| double  | Numbers with decimals values         | 1.2333 | 
-| integer | Numbers that do not contain decimals | 1L, 20L (where "L" tells R to store as an integer) | 
+| character | Letters or numbers surrounded by quotes |  "1" , "Hello world!" |
+| numeric | Whole numbers and numbers with decimal values.  Numeric is an umbrella term that includes integer and double types |   1.23, 20 |  
+|  double  | Numbers with decimals values         | 1.2333 | 
+|  integer | Numbers that do not contain decimals | 1L, 20L (where "L" tells R to store as an integer) | 
 | logical |  A value of true and false | `TRUE`, `FALSE` | 
 
+>  Most of the time when working with numbers in R they will be double. That is the default when you create a vector using `c()` from numbers in R (even whole numbers), and when you read in whole numbers via `read_csv`.
 > There are other basic data types in R, such as *raw* and *complex*, which we won't cover in this textbook. 
 
 ### How are vectors different from a list?
